--- a/nginx/ibb-01-cert.yaml
+++ b/nginx/ibb-01-cert.yaml
@@ -1,14 +1,13 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: tls-ibb-01-test-cns-dev-ingress
+  name: tls-ibb-01-ingress
   namespace: default
 spec:
   dnsNames:
   - ibb-01.test.cns.dev
-  - "*.ibb-01.test.cns.dev"
   issuerRef:
     group: cert-manager.io
     kind: Issuer
     name: letsencrypt
-  secretName: tls-ibb-01-test-cns-dev-ingress
+  secretName: tls-ibb-01-ingress
