--- a/kubernetes/ingressroutetcp-k8s-niagara.yaml
+++ b/kubernetes/ingressroutetcp-k8s-niagara.yaml
@@ -12,12 +12,9 @@ spec:
       services:
         - name: k8s-niagara
           port: 80
-#        - name: nginx
-#          port: 80
-
   tls:
     domains:
-      - main: n4.ibb-01.test.cns.dev
+      - main: ibb-01.test.cns.dev
         sans:
           - n4.ibb-01.test.cns.dev
     secretName: tls-n4-ingress
